--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <string name="drawer_close">navigation drawer cerrado</string>
     <string name="welcome_message">Bienvenido, %s</string>
     <string name="sign_out">Cerrar sesión</string>
+    <string name="facebook_application_id" translatable="false">1497320970280386</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fb1497320970280386</string>
+    <string name="twitter_consumer_key" translatable="false"> vc38XwzhLllns43PIFWmklTK2</string>
+    <string name="twitter_consumer_secret" translatable="false">TfQAf2tDR79HpgEtpF8FBrETASAM8hINk0esjNwZEg74XYsJtx</string>
+    <string name="login_msg_email">Correo electrónico</string>
+    <string name="login_msg_password">Contraseña</string>
+    <string name="login_msg_signin">Iniciar sesión</string>
+    <string name="login_msg_signup">Registrarse</string>
+    <string name="login_msg_login_UI">Login Firebase UI</string>
+    <string name="error_connection_failed">Error, fallo en la conexión </string>
+    <string name="error_google">Error al iniciar sesión con Google</string>
+    <string name="error_empty">Por favor ingrese todos los campos</string>
+    <string name="error_cancelled">Error, inicio de sesión cancelado</string>
 </resources>
